fixes footer padding on mobile

--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -73,6 +73,7 @@
 
 	& ul {
 		list-style: none;
+		padding: 0;
 	}
 
 	& > a {
